--- a/ch1/src/main/res/layout/fragment_one.xml
+++ b/ch1/src/main/res/layout/fragment_one.xml
@@ -1,17 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:orientation="vertical">-->
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="One Fragment"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:gravity="center"-->
+<!--        android:background="#0000ff"-->
+<!--        android:textColor="#ffffff"/>-->
+<!--</LinearLayout>-->
+
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="One Fragment"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:background="#0000ff"
-        android:textColor="#ffffff"/>
-
-</LinearLayout>
+    android:layout_height="wrap_content" />
